[workspace]
members = [
    "ip2country",
    "ip2country-service",
    "ip2country-bench",
    "ip2country-grpc",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cargo = "deny"
pedantic = "deny"
nursery = "deny"
# see https://github.com/rust-lang/rust-clippy/issues/12729
# panic = "deny"
