[workspace]
members = [
    "ip2country",
    "ip2country-service",
    "ip2country-bench",
    "ip2country-grpc",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# see https://github.com/rust-lang/rust-clippy/issues/12729
# panic = "deny"
used_underscore_items = "allow"
doc_markdown = "allow"
