[package]
name = "ip2country-bench"
version = "0.1.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "iai benchmarking"
repository = "https://github.com/extrawurst/ip2country"
readme = "README.md"
license = "MIT"
categories = ["web-programming"]
keywords = ["web", "ip-lookup", "server"]
rust-version = "1.74"

[lints]
workspace = true

[dependencies]
ip2country = { path = "../ip2country" }

[dev-dependencies]
iai = { git = "https://github.com/bheisler/iai.git", rev = "58e28e940c62898a45d17cb531f9012fb173d236" }

[[bench]]
name = "benchmark"
harness = false
