[package]
name = "ip2country-grpc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
readme = "../README.md"
description = "fast grpc server providing ip lookup api"
homepage = "https://github.com/extrawurst/ip2country"
repository = "https://github.com/extrawurst/ip2country"
license = "MIT"
categories = ["web-programming"]
keywords = ["web", "ip-lookup", "server"]

[[example]]
name = "simple"

[dependencies]
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
ip2country = { path = "../ip2country", version = "0.3" }

[build-dependencies]
tonic-build = "0.11"

[lints]
workspace = true
