[package]
name = "ip2country-service"
version = "0.1.0"
edition = "2018"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
description = "fast webserver providing ip lookup api"
homepage = "https://github.com/extrawurst/ip2country"
repository = "https://github.com/extrawurst/ip2country"
readme = "README.md"
license = "MIT"
categories = ["web-programming"]
keywords = [
    "web",
    "ip-lookup",
    "server",
]

[dependencies]
ip2country = { path = "../ip2country", version = "0.2.0" }
hyper = { version = "0.14", features = ["server","runtime","http1"] }
tokio = { version = "1.0", features = ["rt-multi-thread","net","macros"] }
pretty_env_logger = "0.4"
log = "0.4"