[package]
name = "ip2country"
version = "0.1.0"
edition = "2018"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
description = "fast ip to asn-country lookup"
homepage = "https://github.com/extrawurst/ip2country"
repository = "https://github.com/extrawurst/ip2country"
readme = "README.md"
license = "MIT"
categories = ["data-structures","parser-implementations","web-programming"]
keywords = [
    "web",
    "ip-lookup",
    "server",
]

[dependencies]
static_assertions = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = false