[package]
name = "ip2country"
version = "0.3.0"
edition = "2021"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "fast ip to asn-country lookup"
homepage = "https://github.com/extrawurst/ip2country"
repository = "https://github.com/extrawurst/ip2country"
readme = "README.md"
license = "MIT"
categories = ["data-structures","parser-implementations","web-programming"]
keywords = [
    "web",
    "ip-lookup",
    "server",
]

[dependencies]
static_assertions = "1.1"
ascii = { version = "1.0", default-features = false }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = false